--- a/liaoning.html
+++ b/liaoning.html
@@ -59,14 +59,14 @@
 					<div class="topbar-top d-flex justify-content-between flex-lg-wrap">
 						<div class="top-info flex-grow-0">
 							<span class="rounded-circle btn-sm-square bg-primary me-2">
-								<img src="img/tx.jpg" class="rounded-circle" style="height:3rem;">
+								<img src="img/footer-1.jpg" class="rounded-circle" style="height:3rem;">
 							</span>
 							<div class="pe-2 me-3 border-end border-white d-flex align-items-center">
 								<p class="mb-0 text-white fs-6 fw-normal">周涛</p>
 							</div>
 							<div class="overflow-hidden" style="width: 735px;">
 								<div id="note" class="ps-2">
-									<img src="img/tx.jpg" class=" rounded-circle border border-3 border-primary me-2"
+									<img src="img/footer-1.jpg" class=" rounded-circle border border-3 border-primary me-2"
 										style="width: 30px; height: 30px;" alt="">
 									<a href="#">
 										<p class="text-white mb-0 link-hover">欢迎你访问我的个人博客，希望你能够有所收获！</p>
