--- a/qxlc.html
+++ b/qxlc.html
@@ -116,14 +116,14 @@
 					<div class="topbar-top d-flex justify-content-between flex-lg-wrap">
 						<div class="top-info flex-grow-0">
 							<span class="rounded-circle btn-sm-square bg-primary me-2">
-								<img src="img/tx.jpg" class="rounded-circle" style="height:3rem;">
+								<img src="img/footer-1.jpg" class="rounded-circle" style="height:3rem;">
 							</span>
 							<div class="pe-2 me-3 border-end border-white d-flex align-items-center">
 								<p class="mb-0 text-white fs-6 fw-normal">周涛</p>
 							</div>
 							<div class="overflow-hidden" style="width: 735px;">
 								<div id="note" class="ps-2">
-									<img src="img/tx.jpg" class=" rounded-circle border border-3 border-primary me-2"
+									<img src="img/footer-1.jpg" class=" rounded-circle border border-3 border-primary me-2"
 										style="width: 30px; height: 30px;" alt="">
 									<a href="#">
 										<p class="text-white mb-0 link-hover">欢迎你访问我的个人博客，希望你能够有所收获！</p>
@@ -714,8 +714,7 @@
 							<div class="footer-item-1">
 								<h4 class="mb-4 text-white">与我联系</h4>
 								<p class="text-secondary line-h">地址： <span class="text-white">哈尔滨市哈双路348号</span></p>
-								<p class="text-secondary line-h">Email: <span
-										class="text-white">206****07744@126.com</span>
+								<p class="text-secondary line-h">Email: <span class="text-white">206****07744@126.com</span>
 								</p>
 								<p class="text-secondary line-h">电话： <span class="text-white">138*****627</span></p>
 								<div class="d-flex line-h">
@@ -737,8 +736,7 @@
 									<a href="#">
 										<div class="d-flex align-items-center">
 											<div class="rounded-circle border border-2 border-primary overflow-hidden">
-												<img src="img/footer-1.jpg" class="img-zoomin  rounded-circle w-100"
-													alt="">
+												<img src="img/footer-1.jpg" class="img-zoomin  rounded-circle w-100" alt="">
 											</div>
 											<div class="d-flex flex-column ps-4">
 												<p class="text-uppercase text-white mb-3">站长</p>
@@ -755,8 +753,7 @@
 									<a href="#">
 										<div class="d-flex align-items-center">
 											<div class="rounded-circle border border-2 border-primary overflow-hidden">
-												<img src="img/footer-2.jpg" class="img-zoomin rounded-circle w-100"
-													alt="">
+												<img src="img/footer-2.jpg" class="img-zoomin rounded-circle w-100" alt="">
 											</div>
 											<div class="d-flex flex-column ps-4">
 												<p class="text-uppercase text-white mb-3">管理员</p>
@@ -796,7 +793,7 @@
 									凤凰军事</a>
 							</div>
 						</div>
-
+			
 						<div class="col-lg-6 col-xl-3">
 							<div class="footer-item-4">
 								<h4 class="mb-4 text-white">时光记忆</h4>
@@ -846,7 +843,7 @@
 											<img src="img/sy/2 (18).jpg" class="img-zoomin  rounded w-100" alt="">
 										</div>
 									</div>
-
+			
 								</div>
 							</div>
 						</div>
@@ -854,8 +851,8 @@
 				</div>
 			</div>
 			<!-- Footer End -->
-
-
+			
+			
 			<!-- Copyright Start -->
 			<div class="container-fluid copyright bg-dark py-3">
 				<div class="container">
@@ -868,6 +865,8 @@
 				</div>
 			</div>
 			<!-- Copyright End -->
+			
+			
 			<!-- Back to Top -->
 			<a href="#" class="btn btn-primary border-2 border-white rounded-circle back-to-top"><i
 					class="fa fa-arrow-up"></i></a>
